feat: Segment detail endpoint, flags-using query, and override change audit logging (#3)
* feat: segments integration, audit logging

* feat: Detailed GET segment response

* chore: Update swagger docs
